# ZeroLock

./: .gitignore  API_RESPONSE_MIGRATION.md  Cargo.toml  README.md  canister_ids.json  debug.sh  deploy.sh  dfx.json  dfx.json.backup  generate-bindings.sh  package-lock.json  package.json  start.sh  stop.sh
frontend/: SERVICE_LAYER_SUMMARY.md  debug-env.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: Footer.tsx  WalletConnector.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx
frontend/src/declarations/backend/: backend.did.d.ts
frontend/src/examples/: README.md.ts  SimpleServiceExample.tsx
frontend/src/hooks/: useAuth.ts  useBackendService.ts
frontend/src/pages/: ChallengeDetailPage.tsx  CompanyDashboard.tsx  HackerDashboard.tsx  HomePage.tsx
frontend/src/services/: agent.ts  backend.ts  bountyFactory.ts  index.ts  vault.ts
frontend/src/stores/: useAppStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: env.ts  error-handler.ts
src/: BountyFactory.mo  Judge.mo  Leaderboard.mo  Types.mo  Vault.mo  bounty_factory.rs  judge.rs  leaderboard.rs  lib.rs  types.rs  vault.rs  zerolock_backend.did
src/declarations/backend/: backend.did  backend.did.js
