[package]
name = "zerolock"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.13"
candid = "0.10"
serde = { version = "1.0", features = ["derive"] }
ic-stable-structures = "0.6"
ic-cdk-macros = "0.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1